<resources>
    <string name="app_name">KeepTrack</string>

    <string name="app_in_name">KeepTrack</string>
    <string name="app_in_name_after">Authorization Form</string>

    <string name="text_bottom">Log in to your account!</string>
    
    <string name="btnSignIn">Log In</string>
    <string name="btnRegister">Register</string>

    <string name="view_profile">My Profile</string>
    <string name="btnUsers">All users</string>
    <string name="btnDevices">Devices</string>

    <string name="line1">to KeepTrack App</string>
    <string name="line">Welcome</string>

    <string name="notification_text">The application is running in the background!</string>

    <string name="transport_id" translatable="false">123</string>
    <string name="firebase_path" translatable="false">locations</string>
    <string name="firebase_email" translatable="false">test@example.com</string>
    <string name="firebase_password" translatable="false">password</string>

    <string name="app_by">By Savchenko S.M. and Evstafievskaya A.E.</string>

</resources>
