<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/root_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@android:color/white"
    tools:context=".MainActivity" >

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"

        android:layout_height="310dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/start0" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="40dp"
            android:fontFamily="@font/fauna_one"
            android:text="@string/app_in_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="70sp" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:fontFamily="@font/fauna_one"
            android:text="@string/app_in_name_after"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/fauna_one"
        android:text="@string/text_bottom"
        android:textColor="@color/text_bottom"
        android:textSize="15sp"
        />

    <LinearLayout
        android:layout_above="@+id/text_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:weightSum="2"
        android:layout_margin="15dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign_in"
            android:fontFamily="@font/fauna_one"
            android:text="@string/btnSignIn"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_register"
            android:fontFamily="@font/fauna_one"
            android:text="@string/btnRegister"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>

