<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/fauna_one"
        android:text="@string/app_by"
        android:textColor="@color/text_bottom"
        android:textSize="15sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="40dp"
            android:fontFamily="@font/fauna_one"
            android:text="@string/line"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="70sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:fontFamily="@font/fauna_one"
            android:text="@string/line1"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/start0" />

</RelativeLayout>